--- a/style.css
+++ b/style.css
@@ -756,7 +756,7 @@ button:focus {
 
 .mu-single-speakers {
 	display: flex;
-	padding: 0 10px;
+	padding: 15px 10px;
 	outline: none;
 	text-align: left;
 	align-items: top;
@@ -765,7 +765,7 @@ button:focus {
 }
 
 .mu-single-speakers-img {
-	width: 40%;
+	width: 20%;
 }
 
 .mu-speakers-slider .slick-next {
